<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/et_qrcode"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/tv_offline_model_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        android:text="@string/input_info"
        android:gravity="center"
        android:textColor="@color/bg_white"
        android:textSize="@dimen/x18"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.07"/>

    <ImageButton
        android:id="@+id/btn_offline_model_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/icon_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="@dimen/x10"
        app:layout_constraintWidth_percent="0.08"
        app:layout_constraintBottom_toBottomOf="@+id/tv_offline_model_title"/>

    <TextView
        android:id="@+id/tv_expo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expoid"
        style="@style/qrcodeInfoText"
        app:layout_constraintVertical_bias="0.13"
        />

    <TextView
        android:id="@+id/tv_expo_id_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/qrcodeInfoValueText"
        app:layout_constraintTop_toTopOf="@+id/tv_expo_id" />

    <View
        android:id="@+id/v_offline_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color_tiny"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layerType="software"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/tv_expo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/qrcodeInfoText"
        app:layout_constraintVertical_bias="0.26"
        />

    <TextView
        android:id="@+id/tv_expo_name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/qrcodeInfoValueText"
        app:layout_constraintTop_toTopOf="@+id/tv_expo_name" />

    <View
        android:id="@+id/v_offline_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color_tiny"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layerType="software"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.32"/>


    <TextView
        android:id="@+id/tv_expo_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        style="@style/qrcodeInfoText"
        app:layout_constraintVertical_bias="0.38"
        />

    <TextView
        android:id="@+id/tv_expo_company_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/qrcodeInfoValueText"
        app:layout_constraintTop_toTopOf="@+id/tv_expo_company" />

    <View
        android:id="@+id/v_offline_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color_tiny"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layerType="software"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.44"/>

    <TextView
        android:id="@+id/tv_expo_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        style="@style/qrcodeInfoText"
        app:layout_constraintVertical_bias="0.51"
        />

    <TextView
        android:id="@+id/tv_expo_role_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/qrcodeInfoValueText"
        app:layout_constraintTop_toTopOf="@+id/tv_expo_role" />

    <View
        android:id="@+id/v_offline_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color_tiny"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layerType="software"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.56"/>

    <TextView
        android:id="@+id/tv_expo_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        style="@style/qrcodeInfoText"
        app:layout_constraintVertical_bias="0.63"
        />

    <TextView
        android:id="@+id/tv_expo_code_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/bg_black"
        android:textSize="18dp"
        android:gravity="left"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintVertical_bias="0.65" />

    <View
        android:id="@+id/v_offline_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color_tiny"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layerType="software"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.68"/>

    <TextView
        android:id="@+id/tv_expo_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        style="@style/qrcodeInfoText"
        app:layout_constraintVertical_bias="0.75"
        />

    <TextView
        android:id="@+id/tv_expo_number_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/qrcodeInfoValueText"
        app:layout_constraintTop_toTopOf="@+id/tv_expo_number" />

    <View
        android:id="@+id/v_offline_6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color_tiny"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layerType="software"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"/>

    <TextView
        android:id="@+id/tv_offline_qrcode_scan_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/bg_black"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintVertical_bias="0.92"/>

    <TextView
        android:id="@+id/tv_offline_qrcode_scan_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bg_red"
        android:textStyle="bold"
        android:textSize="@dimen/x14"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_offline_check_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/check_in_str"
        android:textColor="@color/bg_white"
        android:background="@color/bg_color"
        android:gravity="center"
        android:visibility="gone"
        android:textStyle="bold"
        android:textSize="@dimen/x18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"/>

    <TextView
        android:id="@+id/tv_offline_last_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/bg_black"
        android:layout_above="@+id/tv_offline_check_in"
        android:layout_marginBottom="5dp"
        android:text="@string/last_scan_value"
        android:layout_marginStart="10dp"
        android:textSize="@dimen/x10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_offline_check_in"/>

    <TextView
        android:id="@+id/tv_offline_last_scan_value"
        android:textStyle="bold"
        android:textColor="@color/bg_black"
        android:gravity="center"
        android:textSize="@dimen/x10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_offline_last_scan"
        app:layout_constraintStart_toEndOf="@+id/tv_offline_last_scan"/>
</androidx.constraintlayout.widget.ConstraintLayout>